--- a/Styles/chapterstyle.css
+++ b/Styles/chapterstyle.css
@@ -1,10 +1,12 @@
 
 p.head {
+  text-indent: 10px;
   font-size: 103%;
   text-align: justify;
 }
 
 p.reg {
+  text-indent: 20px;
   text-align: justify;
 }
 
