--- a/Styles/chapterstyle.css
+++ b/Styles/chapterstyle.css
@@ -22,6 +22,26 @@ p.plch {
   font-variant: small-caps;
 }
 
+div.plol {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 20px;
+  padding: 10px;
+  font-variant: small-caps;
+}
+
+div.oll1 {
+  text-indent: -100px;
+  padding-left: 100px;
+}
+
+div.oll2 {
+  text-indent: -100px;
+  padding-left: 120px;
+}
+
 h2 {
   text-align: center;
 }
